# strands-agents-a2a

./: .env  .gitignore  README.md  customer_coordinator.py  main.py  pyproject.toml  requirements.txt  setup_databases.py  sushi_maru.db  sushi_maru_agent.py  takoyaki_taro.db  takoyaki_taro_agent.py  tokyo_ramen.db  tokyo_ramen_agent.py
tools/: restaurant_tools.py
